--- a/macros.cfg
+++ b/macros.cfg
@@ -62,13 +62,19 @@ gcode:
     {% set hotendtemp = params.HOTEND|int %}
     {% set chambertemp = params.CHAMBER|default(0)|int %}
     
+    M190 S{bedtemp}                                                               ; set & wait for bed temp
+    M109 S{hotendtemp}                                                            ; set & wait for hotend temp
+    #TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={chambertemp}    ; wait for chamber temp
     G28
-    M190 S{bedtemp}
-    M109 S140                                                                    ; set & wait for bed temp
-    #TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={chambertemp}   ; wait for chamber temp
+    ATTACH_PROBE_LOCK
+    BED_MESH_CLEAR
     QUAD_GANTRY_LEVEL
-    M109 S{hotendtemp}                                                           ; set & wait for hotend temp
-    G90   
+    BED_MESH_CALIBRATE
+    G28 Z
+    DOCK_PROBE_UNLOCK
+    CLEAN_NOZZLE
+    G90
+    STATUS_PRINTING
     M117 Printing
 
 [gcode_macro PRINT_END]
@@ -93,5 +99,5 @@ gcode:
     G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
     M107                                     ; turn off fan
     
-    # BED_MESH_CLEAR
+    BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
