--- a/moonraker.conf
+++ b/moonraker.conf
@@ -59,9 +59,10 @@ path: ~/moonraker-timelapse
 origin: https://github.com/mainsail-crew/moonraker-timelapse.git
 managed_services: klipper moonraker
 
-[update_manager client z_calibration]
+[update_manager led_effect]
 type: git_repo
-path: ~/klipper_z_calibration
-origin: https://github.com/protoloft/klipper_z_calibration.git
-install_script: install.sh
-managed_services: klipper
+path: ~/klipper-led_effect
+origin: https://github.com/julianschill/klipper-led_effect.git
+is_system_service: False
+
+
