--- a/printer.cfg
+++ b/printer.cfg
@@ -22,10 +22,12 @@
 
 [include mainsail.cfg]
 [include macros.cfg]
-[include stealthburner_leds.cfg]
+#[include stealthburner_leds.cfg]
+[include stealthburner_led_effects_barf_fan.cfg]
 [include test_speed.cfg]
 [include btt_octopus_pin_aliases.cfg]
 [include klicky-probe.cfg]
+[include nozzle_scrub.cfg]
 
 # MCUs
 ##  Obtain definition by "ls -l /dev/serial/by-id/" then unplug to verify
@@ -63,10 +65,10 @@ probe_points:
    175, 175, 20  # an example
 
 [input_shaper]
-shaper_freq_x: 79.4
-shaper_type_x: 2hump_ei     #Max < 7000 mm/s^2
-shaper_freq_y: 43.6
-shaper_type_y: mzv           #Max < 5600 mm/s^2
+shaper_freq_x: 62.0
+shaper_type_x: ei     #Max < 7200 mm/s^2
+shaper_freq_y: 41.4
+shaper_type_y: zv     #Max < 6700 mm/s^2
 
 [printer]
 kinematics: corexy
@@ -88,7 +90,7 @@ step_pin: MOT0_STEP
 dir_pin: !MOT0_DIR
 enable_pin: !MOT0_EN
 rotation_distance: 40
-microsteps: 256
+microsteps: 32
 full_steps_per_rotation: 200  #set to 400 for 0.9 degree stepper
 #endstop_pin: ESTOP0          #Physical endstop switch
 endstop_pin: tmc5160_stepper_x:virtual_endstop
@@ -177,7 +179,7 @@ step_pin: MOT1_STEP
 dir_pin: !MOT1_DIR
 enable_pin: !MOT1_EN
 rotation_distance: 40
-microsteps: 256
+microsteps: 32
 full_steps_per_rotation: 200  #set to 400 for 0.9 degree stepper
 #endstop_pin: ESTOP1
 endstop_pin: tmc5160_stepper_y:virtual_endstop
@@ -223,7 +225,7 @@ dir_pin: !MOT2_DIR
 enable_pin: !MOT2_EN
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 256
+microsteps: 32
 endstop_pin: probe:z_virtual_endstop
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
@@ -265,7 +267,7 @@ dir_pin: MOT3_DIR
 enable_pin: !MOT3_EN
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 256
+microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 #[tmc2209 stepper_z1]
@@ -295,7 +297,7 @@ dir_pin: !MOT4_DIR
 enable_pin: !MOT4_EN
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 256
+microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 #[tmc2209 stepper_z2]
@@ -325,7 +327,7 @@ dir_pin: MOT5_DIR
 enable_pin: !MOT5_EN
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 256
+microsteps: 32
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 #[tmc2209 stepper_z3]
@@ -369,9 +371,9 @@ sensor_pin: SB2040:gpio27
 #enable_pin: !MOT6_EN
 rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
 gear_ratio: 50:10               #BMG Gear Ratio - CW2
-microsteps: 16                  #Default 32
+microsteps: 32                  #Default 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
-nozzle_diameter: 0.4
+nozzle_diameter: 0.8
 filament_diameter: 1.75
 #heater_pin: HE0
 sensor_type: Generic 3950
@@ -395,7 +397,7 @@ pressure_advance: 0.055
 
 [tmc2209 extruder]
 uart_pin: SB2040:gpio8
-run_current: 0.600
+run_current: 0.6
 stealthchop_threshold: 0
 interpolate: false
 sense_resistor: 0.110
@@ -505,7 +507,7 @@ speed: 10
 samples: 3
 samples_result: median
 sample_retract_dist: 2.0
-samples_tolerance: 0.01
+samples_tolerance: 0.006
 samples_tolerance_retries: 3
 
 #####################################################################
@@ -628,8 +630,19 @@ points:
 speed: 100
 horizontal_move_z: 20
 retries: 5
-retry_tolerance: 0.01
+retry_tolerance: 0.0075
 max_adjust: 10
+
+[bed_mesh]
+speed: 300
+horizontal_move_z: 20
+mesh_min: 40, 40
+mesh_max: 310,310
+fade_start: 0.6
+fade_end: 10.0
+probe_count: 7,7
+algorithm: bicubic
+relative_reference_index: 12
 
 #####################################################################
 #   Display
@@ -753,18 +766,39 @@ gcode:
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 36.105
-#*# pid_ki = 1.125
-#*# pid_kd = 289.739
+#*# pid_kp = 37.773
+#*# pid_ki = 1.217
+#*# pid_kd = 293.215
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 28.096
-#*# pid_ki = 2.973
-#*# pid_kd = 66.379
+#*# pid_kp = 26.247
+#*# pid_ki = 2.966
+#*# pid_kd = 58.075
 #*#
 #*# [stepper_z]
 #*# position_endstop = 0.225
 #*#
 #*# [probe]
-#*# z_offset = 13.391
+#*# z_offset = 14.330
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.075000, -0.036250, -0.047500, -0.055000, -0.045000, -0.071250, -0.077500
+#*# 	  -0.025000, 0.000000, -0.033750, -0.063750, -0.037500, -0.065000, -0.075000
+#*# 	  -0.043750, -0.041250, -0.010000, -0.035000, -0.031250, -0.066250, -0.066250
+#*# 	  -0.070000, -0.047500, -0.042500, -0.062500, -0.055000, -0.078750, -0.058750
+#*# 	  -0.023750, -0.043750, -0.052500, -0.040000, -0.037500, -0.060000, -0.052500
+#*# 	  -0.042500, -0.046250, -0.010000, -0.051250, -0.027500, -0.041250, -0.037500
+#*# 	  -0.026250, -0.017500, -0.001250, -0.000000, -0.000000, -0.025000, -0.006250
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# max_x = 310.0
+#*# min_y = 40.0
+#*# max_y = 310.0
