--- a/printer.cfg
+++ b/printer.cfg
@@ -64,11 +64,11 @@ accel_chip: adxl345
 probe_points:
    175, 175, 20  # an example
 
-[input_shaper]
-shaper_freq_x: 62.0
-shaper_type_x: ei     #Max < 7200 mm/s^2
-shaper_freq_y: 41.4
-shaper_type_y: zv     #Max < 6700 mm/s^2
+#[input_shaper]
+#shaper_freq_x: 62.0
+#shaper_type_x: ei     #Max < 7200 mm/s^2
+#shaper_freq_y: 41.4
+#shaper_type_y: zv     #Max < 6700 mm/s^2
 
 [printer]
 kinematics: corexy
@@ -387,7 +387,7 @@ min_extrude_temp: 170
 #pid_ki = 1.304
 #pid_kd = 131.721
 ##  Try to keep pressure_advance below 1.0
-pressure_advance: 0.055
+#pressure_advance: 0.055
 ##  Default is 0.040, leave stock
 #pressure_advance_smooth_time: 0.040
 
@@ -780,18 +780,18 @@ gcode:
 #*# position_endstop = 0.225
 #*#
 #*# [probe]
-#*# z_offset = 14.330
+#*# z_offset = 14.250
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.075000, -0.036250, -0.047500, -0.055000, -0.045000, -0.071250, -0.077500
-#*# 	  -0.025000, 0.000000, -0.033750, -0.063750, -0.037500, -0.065000, -0.075000
-#*# 	  -0.043750, -0.041250, -0.010000, -0.035000, -0.031250, -0.066250, -0.066250
-#*# 	  -0.070000, -0.047500, -0.042500, -0.062500, -0.055000, -0.078750, -0.058750
-#*# 	  -0.023750, -0.043750, -0.052500, -0.040000, -0.037500, -0.060000, -0.052500
-#*# 	  -0.042500, -0.046250, -0.010000, -0.051250, -0.027500, -0.041250, -0.037500
-#*# 	  -0.026250, -0.017500, -0.001250, -0.000000, -0.000000, -0.025000, -0.006250
+#*# 	-0.075000, -0.036250, -0.047500, -0.055000, -0.045000, -0.071250, -0.077500
+#*# 	-0.025000, 0.000000, -0.033750, -0.063750, -0.037500, -0.065000, -0.075000
+#*# 	-0.043750, -0.041250, -0.010000, -0.035000, -0.031250, -0.066250, -0.066250
+#*# 	-0.070000, -0.047500, -0.042500, -0.062500, -0.055000, -0.078750, -0.058750
+#*# 	-0.023750, -0.043750, -0.052500, -0.040000, -0.037500, -0.060000, -0.052500
+#*# 	-0.042500, -0.046250, -0.010000, -0.051250, -0.027500, -0.041250, -0.037500
+#*# 	-0.026250, -0.017500, -0.001250, -0.000000, -0.000000, -0.025000, -0.006250
 #*# x_count = 7
 #*# y_count = 7
 #*# mesh_x_pps = 2
