--- a/macros.cfg
+++ b/macros.cfg
@@ -53,29 +53,112 @@ gcode:
     G28
     G0 X175 Y175 Z30 F3600
     RESTORE_GCODE_STATE NAME=STATE_G32
-   
+
+#####################################################################
+#   print_start macro - by @jontek2
+#####################################################################
+
+## *** THINGS TO UNCOMMENT: ***
+## Bed mesh (2 lines at 2 locations)
+## Screw_tilt_adjust if your printer is a Trident
+## Quad gantry level if your printer is a V2
+## Nevermore - if you have one
+
 [gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
-    # Parameters
-    {% set bedtemp = params.BED|int %}
-    {% set hotendtemp = params.HOTEND|int %}
-    {% set chambertemp = params.CHAMBER|default(0)|int %}
-    
-    M190 S{bedtemp}                                                               ; set & wait for bed temp
-    M109 S{hotendtemp}                                                            ; set & wait for hotend temp
-    #TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={chambertemp}    ; wait for chamber temp
-    G28
-    ATTACH_PROBE_LOCK
-    BED_MESH_CLEAR
-    QUAD_GANTRY_LEVEL
-    BED_MESH_CALIBRATE
-    G28 Z
-    DOCK_PROBE_UNLOCK
-    CLEAN_NOZZLE
-    G90
-    STATUS_PRINTING
-    M117 Printing
+  # This part fetches data from your slicer. Such as bed temp, extruder temp, chamber temp and size of your printer.
+  {% set target_bed = params.BED|int %}
+  {% set target_hotend = params.HOTEND|int %}
+  {% set target_chamber = params.CHAMBER|default("40")|int %}
+  {% set x_wait = printer.toolhead.axis_maximum.x|float / 2 %}
+  {% set y_wait = printer.toolhead.axis_maximum.y|float / 2 %}
+  {% set area_min_x = params.AREA_START.split(",")[0]|float %}
+  {% set area_min_y = params.AREA_START.split(",")[1]|float %}
+  {% set area_max_x = params.AREA_END.split(",")[0]|float %}
+  {% set area_max_y = params.AREA_END.split(",")[1]|float %}
+  {action_respond_info("PRINT_START Macro Inputs:"+"\nHotend = %d" % (target_hotend)+"\nBed = %d" % (target_bed)+"\nChamber = %d" % (target_chamber)+"\nArea_Min_X = %.2f" % (area_min_x|float)+"\nArea_Min_Y = %.2f" % (area_min_x|float)+"\nArea_Max_X = %.2f" % (area_max_x|float)+"\n  Area_Max_Y = %.2f" % (area_max_y|float))}
+
+  # Homes the printer, sets absolute positioning and updates the Stealthburner leds.
+  STATUS_HOMING         # Sets SB-leds to homing-mode
+  G28                   # Full home (XYZ)
+  G90                   # Absolut position
+
+  ##  Uncomment for bed mesh (1 of 2)
+  BED_MESH_CLEAR       # Clears old saved bed mesh (if any)
+
+  # Checks if the bed temp is higher than 90c - if so then trigger a heatsoak.
+  {% if params.BED|int > 90 %}
+    SET_DISPLAY_TEXT MSG="Bed: {target_bed}c"           # Displays info
+    STATUS_HEATING                                      # Sets SB-leds to heating-mode
+    M106 S255                                           # Turns on the PT-fan
+
+    ##  Uncomment if you have a Nevermore.
+    #SET_PIN PIN=nevermore VALUE=1                      # Turns on the nevermore
+
+    G1 X{x_wait} Y{y_wait} Z15 F9000                    # Goes to center of the bed
+    M190 S{target_bed}                                  # Sets the target temp for the bed
+    SET_DISPLAY_TEXT MSG="Heatsoak: {target_chamber}c"  # Displays info
+    TEMPERATURE_WAIT SENSOR="temperature_sensor Chamber" MINIMUM={target_chamber}   # Waits for chamber to reach desired temp
+
+  # If the bed temp is not over 90c, then it skips the heatsoak and just heats up to set temp with a 5min soak
+  {% else %}
+    SET_DISPLAY_TEXT MSG="Bed: {target_bed}c"           # Displays info
+    STATUS_HEATING                                      # Sets SB-leds to heating-mode
+    G1 X{x_wait} Y{y_wait} Z15 F9000                    # Goes to center of the bed
+    M190 S{target_bed}                                  # Sets the target temp for the bed
+    SET_DISPLAY_TEXT MSG="Soak for 5min"                # Displays info
+    G4 P300000                                          # Waits 5 min for the bedtemp to stabilize
+  {% endif %}
+
+  # Heating nozzle to 150 degrees. This helps with getting a correct Z-home
+  #SET_DISPLAY_TEXT MSG="Hotend: 150c"          # Displays info
+  #M109 S150                                    # Heats the nozzle to 150c
+
+  # Heats up the nozzle up to target via data from slicer
+  SET_DISPLAY_TEXT MSG="Hotend: {target_hotend}c"             # Displays info
+  STATUS_HEATING                                                # Sets SB-leds to heating-mode
+  G1 X{x_wait} Y{y_wait} Z15 F9000                              # Goes to center of the bed
+  M107                                                          # Turns off partcooling fan
+  M109 S{target_hotend}                                       # Heats the nozzle to printing temp
+
+  ##  Uncomment for Klicky probe
+  ATTACH_PROBE_LOCK                         # If you use a Klicky probe
+
+  ##  Uncomment for Trident (screw_tilt_adjust)
+  #SET_DISPLAY_TEXT MSG="Z-tilt adjust"     # Displays info
+  #STATUS_LEVELING                          # Sets SB-leds to leveling-mode
+  #Z_TILT_ADJUST                            # Levels the buildplate via z_tilt_adjust
+  #G28 Z                                    # Homes Z again after z_tilt_adjust
+
+  ##  Uncomment for V2 (Quad gantry level AKA QGL)
+  SET_DISPLAY_TEXT MSG="QGL"      # Displays info
+  STATUS_LEVELING                 # Sets SB-leds to leveling-mode
+  QUAD_GANTRY_LEVEL               # Levels the buildplate via QGL
+  
+  ##  Uncomment for Klicky auto-z
+  #CALIBRATE_Z                                 # Calibrates Z-offset with klicky
+  #SET_DISPLAY_TEXT MSG="Z-offset"             # Displays info
+
+  ##  Uncomment for bed mesh (2 of 2)
+  SET_DISPLAY_TEXT MSG="Bed mesh"    # Displays info
+  STATUS_MESHING                     # Sets SB-leds to bed mesh-mode
+  BED_MESH_CALIBRATE AREA_START={area_min_x},{area_min_y} AREA_END={area_max_x},{area_max_y}                 # Starts bed mesh
+  G28 Z                              # Homes Z again after QGL
+
+  ##  Uncomment for Klicky probe
+  DOCK_PROBE_UNLOCK                        # If you use a Klicky probe
+
+  ##  Uncomment for nozzle brush
+  CLEAN_NOZZLE                             # If you use a nozzle brush
+
+  # Gets ready to print by doing a purge line and updating the SB-leds
+  SET_DISPLAY_TEXT MSG="Printer goes brr"          # Displays info
+  STATUS_PRINTING                                  # Sets SB-leds to printing-mode
+  G0 X{x_wait - 50} Y4 F10000                      # Moves to starting point
+  G0 Z0.4                                          # Raises Z to 0.4
+  G91                                              # Incremental positioning 
+  G1 X100 E20 F1000                                # Purge line
+  G90                                              # Absolut position
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
@@ -101,3 +184,94 @@ gcode:
     
     BED_MESH_CLEAR
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END
+
+[gcode_macro BED_MESH_CALIBRATE]
+rename_existing: BED_MESH_CALIBRATE_BASE
+; gcode parameters
+variable_parameter_AREA_START : 0,0
+variable_parameter_AREA_END : 0,0
+; the clearance between print area and probe area 
+variable_mesh_area_offset : 5.0
+; number of sample per probe point
+variable_probe_samples : 2
+; minimum probe count
+variable_min_probe_count : 3
+; scale up the probe count, should be 1.0 ~ < variable_max_probe_count/variable_min_probe_count
+variable_probe_count_scale_factor : 1.0
+gcode:
+    {% set area_min_x = params.AREA_START.split(",")[0]|float %}
+	{% set area_min_y = params.AREA_START.split(",")[1]|float %}
+	{% set area_max_x = params.AREA_END.split(",")[0]|float %}
+	{% set area_max_y = params.AREA_END.split(",")[1]|float %}
+    {action_respond_info("BED_MESH_CALIBRATE Macro Inputs:"+"\nHotend = %d" % (hotendtemp)+"\nBed = %d" % (bedtemp)+"\nChamber = %d" % (chambertemp)+"\nArea_Min_X = %.2f" % (area_min_x|float)+"\nArea_Min_Y = %.2f" % (area_min_x|float)+"\nArea_Max_X = %.2f" % (area_max_x|float)+"\n  Area_Max_Y = %.2f" % (area_max_y|float))}
+        
+        {% set area_min_x = params.AREA_START.split(",")[0]|float %}
+	    {% set area_min_y = params.AREA_START.split(",")[1]|float %}
+	    {% set area_max_x = params.AREA_END.split(",")[0]|float %}
+	    {% set area_max_y = params.AREA_END.split(",")[1]|float %}
+        {action_respond_info("BED_MESH_CALIBRATE Macro Inputs:"+"\nArea_Min_X = %.2f" % (area_min_x|float)+"\nArea_Min_Y = %.2f" % (area_min_x|float)+"\nArea_Max_X = %.2f" % (area_max_x|float)+"\n  Area_Max_Y = %.2f" % (area_max_y|float))}
+
+    {% if params.AREA_START and params.AREA_END %}
+        {% set bedMeshConfig = printer["configfile"].config["bed_mesh"] %}
+        {% set safe_min_x = bedMeshConfig.mesh_min.split(",")[0]|float %}
+        {% set safe_min_y = bedMeshConfig.mesh_min.split(",")[1]|float %}
+        {% set safe_max_x = bedMeshConfig.mesh_max.split(",")[0]|float %}
+        {% set safe_max_y = bedMeshConfig.mesh_max.split(",")[1]|float %}
+
+
+
+        {% set meshPointX = bedMeshConfig.probe_count.split(",")[0]|int %}
+        {% set meshPointY = bedMeshConfig.probe_count.split(",")[1]|int %}
+	
+	{% set meshMaxPointX = meshPointX %}
+	{% set meshMaxPointY = meshPointY %}
+
+
+        {% if (area_min_x < area_max_x) and (area_min_y < area_max_y) %}
+            {% if area_min_x - mesh_area_offset >=  safe_min_x %}
+                {% set area_min_x = area_min_x - mesh_area_offset %}
+            {% else %}
+                {% set area_min_x = safe_min_x %}
+            {% endif %}
+
+            {% if area_min_y - mesh_area_offset >=  safe_min_y %}
+                {% set area_min_y = area_min_y - mesh_area_offset %}
+            {% else %}
+                {% set area_min_y = safe_min_y %}
+            {% endif %}
+
+            {% if area_max_x + mesh_area_offset <=  safe_max_x %}
+                {% set area_max_x = area_max_x + mesh_area_offset %}
+            {% else %}
+                {% set area_max_x = safe_max_x %}
+            {% endif %}
+
+            {% if area_max_y + mesh_area_offset <=  safe_max_y %}
+                {% set area_max_y = area_max_y + mesh_area_offset %}
+            {% else %}
+                {% set area_max_y = safe_max_y %}
+            {% endif %}
+
+            {% set meshPointX = (meshPointX * (area_max_x - area_min_x) / (safe_max_x - safe_min_x) * probe_count_scale_factor)|round(0)|int %}
+            {% if meshPointX < min_probe_count %}
+                {% set meshPointX = min_probe_count %}
+            {% endif %}
+	    {% if meshPointX > meshMaxPointX %}
+                {% set meshPointX = meshMaxPointX %}
+            {% endif %}
+
+            {% set meshPointY = (meshPointY * (area_max_y -area_min_y ) / (safe_max_y - safe_min_y) * probe_count_scale_factor )|round(0)|int %}
+            {% if meshPointY < min_probe_count %}
+                {% set meshPointY = min_probe_count %}
+            {% endif %}
+	    {% if meshPointY > meshMaxPointY %}
+                {% set meshPointY = meshMaxPointY %}
+            {% endif %}
+
+            BED_MESH_CALIBRATE_BASE mesh_min={area_min_x},{area_min_y} mesh_max={area_max_x},{area_max_y} probe_count={meshPointX},{meshPointY} samples={probe_samples|int}
+        {% else %}
+            BED_MESH_CALIBRATE_BASE
+        {% endif %}
+    {% else %}
+        BED_MESH_CALIBRATE_BASE
+    {% endif %}
