--- a/nozzle_scrub.cfg
+++ b/nozzle_scrub.cfg
@@ -38,7 +38,7 @@
 variable_location_bucket_rear:      True
 
 # If you want the purging routine in your bucket enabled, set to True (and vice versa).
-variable_enable_purge:              False
+variable_enable_purge:              True
 
 # These parameters define your filament purging. The retract variable is used to retract right after purging to prevent unnecessary
 # oozing. Some filament are particularly oozy and may continue to ooze out of the nozzle for a second or two after retracting. The
@@ -50,7 +50,7 @@ variable_purge_ret:             2            ; Retract length, in mm, after purg
 variable_ooze_dwell:            2            ; Dwell/wait time, in seconds, after purging and retracting.
 
 # Adjust this so that your nozzle scrubs within the brush. Currently defaulted to be a lot higher for safety. Be careful not to go too low!
-variable_brush_top:            1 
+variable_brush_top:             2 
 
 # These parameters define your scrubbing, travel speeds, safe z clearance and how many times you want to wipe. Update as necessary. Wipe 
 # direction is randomized based off whether the left or right bucket is randomly selected in the purge & scrubbing routine.
@@ -83,8 +83,7 @@ variable_wipe_spd_xy:        5000	         ; Nozzle wipe speed in mm/min.
 #variable_brush_start:     50
 
 ## For V2.4 350mm build, uncomment this below:
-#variable_brush_start:     75
-variable_brush_start:     225
+variable_brush_start:     75
 
 # This value is defaulted from brush location in CAD (rear left). Change if your brush width is different.
 variable_brush_width:          52	
@@ -209,8 +208,7 @@ gcode:
       ## Clear from area.
       M117 Cleaned!
       G1 Z{brush_top + clearance_z} F{prep_spd_z}
-      #G1 X{bucket_start + (bucket_left_width / 4)} F{prep_spd_xy} #bugfix for right side mounted buckets
-      G1 X175 F{prep_spd_xy}
+      G1 X{bucket_start + (bucket_left_width / 4)} F{prep_spd_xy} #bugfix for right side mounted buckets
 
       ## Restore the gcode state to how it was before the macro.
       RESTORE_GCODE_STATE NAME=clean_nozzle
